[gd_scene load_steps=30 format=3 uid="uid://dtun8dhwb3qmw"]

[ext_resource type="Script" uid="uid://51bftvpvo0s1" path="res://Scripts/StationaryEnemy.gd" id="1_xrvsy"]
[ext_resource type="Texture2D" uid="uid://cipi18dmb1ros" path="res://Sprites/Tree_Enemy_sprite.png" id="2_r8pdk"]
[ext_resource type="Script" uid="uid://cq5vqxgotrdxr" path="res://Scripts/TreeStats.gd" id="3_r8pdk"]
[ext_resource type="PackedScene" uid="uid://uashcoev36bo" path="res://Scenes/HurtArea.tscn" id="3_rtnmu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ep4db"]
atlas = ExtResource("2_r8pdk")
region = Rect2(224, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlnqt"]
atlas = ExtResource("2_r8pdk")
region = Rect2(336, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_q75co"]
atlas = ExtResource("2_r8pdk")
region = Rect2(448, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_irsvp"]
atlas = ExtResource("2_r8pdk")
region = Rect2(0, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucj68"]
atlas = ExtResource("2_r8pdk")
region = Rect2(112, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8b27"]
atlas = ExtResource("2_r8pdk")
region = Rect2(224, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_knasm"]
atlas = ExtResource("2_r8pdk")
region = Rect2(336, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_14vpm"]
atlas = ExtResource("2_r8pdk")
region = Rect2(0, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_nejui"]
atlas = ExtResource("2_r8pdk")
region = Rect2(112, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrayq"]
atlas = ExtResource("2_r8pdk")
region = Rect2(224, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_u21jy"]
atlas = ExtResource("2_r8pdk")
region = Rect2(336, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_67dff"]
atlas = ExtResource("2_r8pdk")
region = Rect2(448, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf7ct"]
atlas = ExtResource("2_r8pdk")
region = Rect2(0, 448, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtls1"]
atlas = ExtResource("2_r8pdk")
region = Rect2(112, 448, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhk44"]
atlas = ExtResource("2_r8pdk")
region = Rect2(224, 448, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tfex"]
atlas = ExtResource("2_r8pdk")
region = Rect2(336, 448, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcmpx"]
atlas = ExtResource("2_r8pdk")
region = Rect2(448, 448, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f6no"]
atlas = ExtResource("2_r8pdk")
region = Rect2(448, 224, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nfbn"]
atlas = ExtResource("2_r8pdk")
region = Rect2(112, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_uynkp"]
atlas = ExtResource("2_r8pdk")
region = Rect2(224, 336, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_hon7p"]
atlas = ExtResource("2_r8pdk")
region = Rect2(0, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpxu3"]
atlas = ExtResource("2_r8pdk")
region = Rect2(112, 0, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_btjmi"]
atlas = ExtResource("2_r8pdk")
region = Rect2(448, 0, 112, 112)

[sub_resource type="SpriteFrames" id="SpriteFrames_rwhvo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep4db")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlnqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q75co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irsvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucj68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8b27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knasm")
}],
"loop": false,
"name": &"Attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14vpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nejui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrayq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u21jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67dff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf7ct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhk44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tfex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcmpx")
}],
"loop": false,
"name": &"Dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f6no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nfbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uynkp")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hon7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpxu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btjmi")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8pdk"]
size = Vector2(48, 54)

[node name="TreeEnemy" type="Node2D"]
script = ExtResource("1_xrvsy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -56)
sprite_frames = SubResource("SpriteFrames_rwhvo")
animation = &"Hurt"
autoplay = "Idle"

[node name="HurtArea" parent="." instance=ExtResource("3_rtnmu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(0, -27)
shape = SubResource("RectangleShape2D_r8pdk")

[node name="RaycastDown" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(0, 2)
collision_mask = 0

[node name="Stats" type="Node" parent="."]
script = ExtResource("3_r8pdk")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
